--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
         "build": "electron-packager . --asar --prune --extra-resource=./extraResources/services.json --out dist --overwrite",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-        "electron": "electron .",
         "dev": "BROWSER=none nf start",
+        "app": "electron .",
         "package": "electron-forge make",
         "arch": "mkdir -p ./out/make/arch/x64 && cd ./out/make/arch/x64 && debtap ../../deb/x64/message-plex_${npm_package_version}_amd64.deb && cd ../../../.."
     },
